Добавлен эндпоинт на удаление ответственного на день
