# src/main/java/ru/tpu/hostel/schedules/controller/ResponsibleController.java
@@ -3,6 +3,7 @@ package ru.tpu.hostel.schedules.controller;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -61,6 +62,12 @@ public class ResponsibleController {
             @RequestParam(name = "type") EventType type
     ) {
         return responsibleService.getAllResponsibleByTypeAndDate(date, type);
+    }
+
+    @DeleteMapping
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    public void deleteResponsible(@RequestParam(name = "responsibleId") UUID responsibleId) {
+        responsibleService.deleteResponsible(responsibleId);
     }
 
 }
